# jservice-rs

./: .travis.yml  Cargo.toml  README.md  build.rs  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
jservice/: Clue.t.html  fn.get_categories.html  fn.get_category.html  fn.get_clues.html  fn.get_random.html  get_categories.v.html  get_category.v.html  get_clues.v.html  get_random.v.html  index.html  sidebar-items.js  struct.Category.html  struct.Clue.html
src/: lib.rs  lib.rs.in  model.rs
src/jservice/: lib.rs.html
tests/: mod.rs
