[package]
name = "jservice"
version = "0.1.2"
authors = ["Brandon King <wektorious@gmail.com>"]

description = "A jService API wrapper."

documentation = "https://vectorious.github.io/jservice-rs/"
repository = "https://github.com/Vectorious/jservice-rs"
keywords = ["trivia", "jeopardy"]

readme = "README.md"

license = "Apache-2.0"

build = "build.rs"

[build-dependencies]
serde_codegen = "0.7"
syntex = "0.35"

[dependencies]
hyper = "0.9"
serde = "0.7"
serde_json = "0.7"

[dependencies.chrono]
version = "0.2"
features = ["serde"]
