[package]
name = "jservice"
version = "0.1.4"
authors = ["Brandon King <wektorious@gmail.com>"]

description = "A jService API wrapper."

documentation = "https://vectorious.github.io/jservice-rs/"
repository = "https://github.com/Vectorious/jservice-rs"
keywords = ["trivia", "jeopardy"]

readme = "README.md"

license = "Apache-2.0"

build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
hyper = "0.9"
serde = "0.8"
serde_json = "0.8"

[dependencies.chrono]
version = "0.2"
features = ["serde"]
